test/negative/801_macro_bad_primitive.err
801_macro_bad_primitive.fx:3:26: error: unknown macro primitive '@bogus'; expected @file, @line or @string
 3 | macro m(e: @expr): int = @bogus
   |                          ^~~~~~~
